--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -2,10 +2,11 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set (main_src
         main.cpp
-        DemoDrawer/DemoDrawer.cpp DemoDrawer/DemoDrawer.h
+        DemoDrawer/Controller.cpp DemoDrawer/Controller.h
         DemoDrawer/Demos/DemoInterface.cpp DemoDrawer/Demos/DemoInterface.h
-        DemoDrawer/Demos/PlainBezierCurveDemo/PlainBezierCurveDemo.cpp DemoDrawer/Demos/PlainBezierCurveDemo/PlainBezierCurveDemo.h
-        )
+        DemoDrawer/Demos/PlainBezierCurveDemo/Demo.cpp DemoDrawer/Demos/PlainBezierCurveDemo/Demo.h
+        DemoDrawer/Demos/PlainBezierCurveDemo/EventProcessor.cpp DemoDrawer/Demos/PlainBezierCurveDemo/EventProcessor.h
+)
 
 add_executable(app
         ${main_src}
@@ -18,5 +19,6 @@ target_link_libraries(app
 # Linking SDL2.
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake/Modules)
 find_package(SDL2 REQUIRED)
-include_directories(${SDL2_INCLUDE_DIR})
-target_link_libraries(app ${SDL2_LIBRARY})
+find_package(SDL2GFX REQUIRED)
+include_directories(${SDL2_INCLUDE_DIR} ${SDL2GFX_INCLUDE_DIR})
+target_link_libraries(app ${SDL2_LIBRARY} ${SDL2GFX_LIBRARY})
